frontend/styles/index.scss
@import "mixins";
@include flex-layout-generator();

@import "../components/Header";
@import "../components/Auction";
@import "../components/Badge";
@import "../components/OpenMarker";
@import "../components/InfoSection";
@import "../components/Footer";

span,
label,
input,
button {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: 400;
}

label {
  opacity: 0.66;
}

body,
html {
  margin: 0;
  padding: 0;
  font-family: inherit;
  font-size: 1rem;
  font-weight: 400;
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
  border-color: inherit;
  color: inherit;
}

h1 {
  color: #452a83;
  opacity: 0.8;
  font-size: 4rem;
  margin: 0 0 0 -2px;
  font-weight: 400;
}
h2 {
  color: #452a83;
  opacity: 0.8;
  font-size: 2rem;
  margin: 0 0 0 -2px;
  font-weight: 400;
}

span {
  font-size: 1rem;
  font-weight: 500;
  color: #452a83;
  opacity: 0.8;
  line-height: 1.5;
}

button {
  @extend .row-c-c;
  padding: 0.5rem 0.66rem;
  border: none;
  border-radius: 0.5rem;
  background: transparent;
  gap: 0.5rem;
  transition: all 150ms;
  cursor: pointer;

  background: #f5efff;

  &.filled {
    background: #8465cc;
    color: #fff;
    border: none;
    &:hover {
      opacity: 0.8;
    }
  }
  &:hover {
    filter: brightness(102.5%);
    transform: scale(1.025);
  }
}

.w-100 {
  width: 100%;
}

.page {
  max-width: 840px;
  margin: 0 auto;
  padding-top: 2rem;
}

.flex {
  flex: 1;
}

.disabled {
  pointer-events: none;
  opacity: 0.66;
}

